<resources>
    <string name="app_name">DxWorkspace</string>
    <string name="title_intro_app">Giải pháp không gian làm việc số cho doanh nghiệp</string>
    <string name="please_enter_info">Email</string>
    <string name="user_name">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="portal">Portal</string>
    <string name="forget_password">Quên mật khẩu ?</string>
    <string name="error_notification">Có lỗi xảy ra!</string>
    <string name="title_choose_time">Chọn khoảng thời gian</string>
    <string name="title_time_start">Thời gian bắt đầu</string>
    <string name="title_end_date">Thời gian kết thúc</string>
    <string name="title_detail_task">Chi tiết công việc</string>
    <string name="title_create_task">Tạo công việc</string>
    <string name="tv_title_chart_plan_status">Đồ thị kế hoạch sản xuất theo trạng thái</string>
    <string name="tv_title_chart_financial_status">Đồ thị doanh thu, chi phí, lợi nhuận </string>
    <string name="tv_title_chart_sale_status">Đồ thị kinh doanh tổng quan </string>
    <string name="tv_title_chart_manufacturing">Đồ thị hiệu quả sản xuất tổng quan </string>
    <string name="tv_title_chart_plan_progress">Đồ thị lệnh sản xuất theo tiến độ</string>
    <string name="tv_title_chart_command_status">Đồ thị lệnh sản xuất theo trạng thái</string>
    <string name="tv_title_chart_command_progress">Đồ thị kế hoạch sản xuất theo tiến độ</string>
    <string name="tv_title_chart_request_status">Đồ thị đề nghị theo trạng thái</string>
    <string name="tv_title_chart_request_type">Đồ thị đề nghị theo mục đích </string>
    <string name="tv_title_chart_quality">Đồ thị % chất lượng sản xuất các sản phẩm</string>
    <string name="title_status_plan">Trạng thái kế hoạch</string>
    <string name="title_progress_plan">Tiến độ kế hoạch</string>
    <string name="title_status_command">Trạng thái lệnh</string>
    <string name="title_progress_command">Tiến độ lệnh</string>
    <string name="title_status_request">Trạng thái yêu cầu</string>
    <string name="title_type_request">Loại yêu cầu</string>
    <string name="title_nodata_plan">Không có kế hoạch sản xuất nào!</string>
    <string name="title_nodata_command">Không có lệnh sản xuất nào!</string>
    <string name="title_nodata_request">Không có đề nghị nào!</string>
    <string name="title_nodata_report">Không có dữ liệu!</string>
    <string name="title_percent_average">Trung bình</string>
    <string name="title_dashboard">Tổng quan</string>
    <string name="note_dashboard">Dữ liệu được so sánh trong khoảng từ %s đến %s với khoảng từ %s đến %s  </string>
    <string name="title_unit_manage">Đơn vị quản lý <font color='red'>*</font></string>
    <string name="title_user_responsible">Người thực hiện <font color='red'>*</font></string>
    <string name="title_user_approval">Người phê duyệt <font color='red'>*</font></string>
    <string name="title_user_consult">Người tư vấn</string>
    <string name="title_user_view">Người quan sát</string>
    <string name="title_priority">Độ ưu tiên <font color='red'>*</font></string>
    <string name="title_task_name">Tên công việc <font color='red'>*</font></string>
    <string name="title_time_start_new">Ngày bắt đầu <font color='red'>*</font></string>
    <string name="title_time_end">Ngày kết thúc <font color='red'>*</font></string>
    <string name="title_des">Mô tả </string>
    <string name="title">Tiêu đề</string>
    <string name="number_user">(%s nhân viên )</string>
    <string name="number_material">(Có %s nguyên liệu)</string>
    <string name="number_bill_material">(Có %s phiếu xuất nguyên liệu)</string>
    <string name="unit_collab">Đơn vị phối hợp thực hiện</string>
    <string name="tv_quantity_red">Số lượng <font color='red'>*</font></string>
    <string name="tv_manager_material_red">Người phụ trách NVL <font color='red'>*</font></string>
    <string name="tv_manager_observer_red">Người giám sát  <font color='red'>*</font></string>
    <string name="tv_manager_tester_red">Người kiểm định <font color='red'>*</font></string>
    <string name="tv_product_need_manufacturing">Cần lập kế hoạch sản xuất %s sản phẩm</string>
    <string name="title_work_schedule_month">Lịch sản xuất tháng %s</string>
    <string name="title_alert">Thông báo</string>
    <string name="cancel">Không</string>
    <string name="accept">Có</string>
    <string name="title_all_notify">Tất cả thông báo</string>
    <string name="title_mark_as_read_notify">Đánh dấu tất cả đã đọc</string>
    <string name="title_notification_emty_all">Chưa có thông báo </string>
    <string name="chanel_message">@string/app_name</string>
    <string name="chanel_id">@string/app_name</string>
</resources>