<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".presentation.ui.login.LoginActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:srcCompat="@drawable/ic_logo_app"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            android:layout_marginTop="@dimen/_32sdp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    style="@style/LoginFormEditText"
                    android:drawableStart="@drawable/ic_login_username"
                    android:hint="@string/user_name"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    style="@style/LoginFormEditText"
                    android:drawableStart="@drawable/ic_login_password"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_11sdp"
                    android:text="vnist123@"
                    android:paddingEnd="0dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPortal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPortal"
                    android:layout_width="match_parent"
                    style="@style/LoginFormEditText"
                    android:drawableStart="@drawable/ic_login_password"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/portal"
                    android:text="vnist"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingStart="@dimen/_11sdp"
                    android:paddingEnd="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/ButtonSecond"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:enabled="false"
                android:text="@string/login" />
            <TextView
                android:id="@+id/btnResetPassword"
                style="@style/Font.TextSemiBold13"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/forget_password" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>