<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/pullToRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_foot_menu"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heigt_toolbar"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBack"
                    style="@style/ImageToolbar" />

                <TextView
                    style="@style/Font.TextSemiBold13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:includeFontPadding="false"
                    android:text="Danh sách thông báo"
                    android:textColor="@color/clr_main_dark"
                    tools:ignore="RelativeOverlap" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/clr_line_new" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <TextView
                    style="@style/Font.TextRegular13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:includeFontPadding="false"
                    android:text="@string/title_all_notify"
                    android:paddingVertical="@dimen/_10sdp"
                    android:textColor="@color/clr_main_dark"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/tvMarkAsReadAll"
                    style="@style/Font.TextRegular13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:includeFontPadding="false"
                    android:paddingVertical="@dimen/_10sdp"
                    android:visibility="gone"
                    android:text="@string/title_mark_as_read_notify"
                    android:textColor="@color/sp_color_blue"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/view_root_rcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@drawable/bg_border_notification"
                android:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvNotify"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="10"
                    tools:listitem="@layout/item_notify" />
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/view_root_emty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_border_notification">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_emty_notification" />

                    <TextView
                        style="@style/Font.TextSemiBold13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:includeFontPadding="false"
                        android:text="@string/title_notification_emty_all"
                        android:textColor="@color/clr_main_dark"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />
                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>
